<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp"
    android:orientation="vertical"
    tools:context="com.cyclon.com.med_manager.AddMedication">
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medication_name"
        android:id="@+id/medication_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/describe_medication"
        android:id="@+id/medication_description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervals"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/medication_interval"
            android:layout_toStartOf="@+id/medication_interval"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:id="@+id/medication_interval"
            android:textAlignment="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/medication_start_date"
            android:layout_toStartOf="@+id/medication_start_date"/>

        <Button
            android:layout_width="155dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:text="21/04/2018"
            android:textSize="15sp"
            android:id="@+id/medication_start_date"
            android:textAlignment="center"
            android:background="@drawable/date_picker"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/medication_end_date"
            android:layout_toStartOf="@+id/medication_end_date"/>

        <Button
            android:layout_width="155dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:text="21/04/2018"
            android:textSize="15sp"
            android:textAlignment="center"
            android:id="@+id/medication_end_date"
            android:background="@drawable/date_picker"/>

    </RelativeLayout>
    
    <Button
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="ADD"
        android:onClick="add"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/add_button_back"/>

</LinearLayout>
